context menu no longer hidden behinds compass nav arrow

--- a/public/javascripts/SVLabel/css/svl-context-menu.css
+++ b/public/javascripts/SVLabel/css/svl-context-menu.css
@@ -1,5 +1,6 @@
 #context-menu-holder {
     position: absolute;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
